# dqmc

./: .gitignore  README.md  checkpy  meson.build  pyproject.toml  requirements.txt
.github/workflows/: build.yml  test.yml
dqmc/: meson.build  model.py
dqmc/src/: __init__.py
dqmc/tests/: test_linalg.py
