[build-system]
requires = [
    "meson-python>=0.15.0",
    "numpy>=1.25",
    "ninja",
]
build-backend = "mesonpy"

[project]
name = "dqmc"
version = "0.1.0"
description = "Determinant Quantum Monte Carlo simulations in python"
readme = "README.md"
license = { text = "MIT License" }
authors = [{ name = "Dylan Jones", email = "dylanljones94@gmail.com" }]
requires-python = ">=3.10"
keywords = ["quantum monte carlo", "physics", "dqmc"]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.25",
    "numba>=0.57",
    "scipy>=1.10",
    "h5py>=3.0",
    "matplotlib>=3.5",
    "lattpy>=0.6",
    "psutil>=5.0",
    "tqdm>=4.0",
]

[project.urls]
Homepage = "https://github.com/dylanljones/dqmc"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = "__init__.py|__main__.py|_version.py|utils.py"

[tool.pytest.ini_options]
testpaths = ["dqmc/tests"]
